# edgp-ai-compliance

./: .env.development  .env.example  .env.prd  .env.production  .env.sit  .gitignore  Dockerfile  Makefile  README.md  deployment.yaml  docker-compose.yml  dockerfile  generate_pdf.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_env_config.py
.claude/: settings.local.json
aiohttp/: __init__.py
config/: __init__.py  settings.py
diagrams/: generate_diagrams.sh  view_online.html
scripts/: capture_traces_to_dataset.py  check_traces.py  create_langsmith_dataset.py  inspect_traces_detailed.py  langsmith_evaluators.py  run_langsmith_experiment.py  setup_langsmith.sh
src/compliance_agent/: __init__.py  clean_edgp_agent.py  international_ai_agent.py
src/compliance_agent/api/: __init__.py  health.py  main.py  metrics.py
src/compliance_agent/api/routers/: __init__.py  compliance_router.py  edgp_compliance_router.py  governance_router.py  privacy_router.py  remediation_router.py
src/compliance_agent/compliancesInfo/: GDPR.json  GDPR_FULL.json  PDPA.json  PDPA_FULL.json  compliance_opensearch_bulk copy.ndjson  compliance_opensearch_bulk.ndjson  edgp_compliance_bulk.json
src/compliance_agent/core/: __init__.py  compliance_engine.py  edgp_compliance_orchestrator.py
src/compliance_agent/models/: __init__.py  compliance_models.py  edgp_models.py
src/compliance_agent/services/: __init__.py  ai_analyzer.py  ai_secrets_service.py  aws_rds_service.py  compliance_pattern_loader.py  compliance_scheduler.py  data_retention_scanner.py  edgp_database_service_simple.py  llm_service.py  remediation_integration_service.py  rule_engine.py
src/compliance_agent/utils/: __init__.py  compliance_utils.py  logger.py
src/remediation_agent/: README.md  __init__.py  main.py
src/remediation_agent/agents/: __init__.py  decision_agent.py  validation_agent.py  workflow_agent.py
src/remediation_agent/graphs/: __init__.py  remediation_graph.py
src/remediation_agent/graphs/nodes/: __init__.py  analysis_node.py  decision_node.py  execution_node.py  human_loop_node.py  workflow_node.py
src/remediation_agent/state/: __init__.py  models.py  remediation_state.py
src/remediation_agent/tools/: __init__.py  notification_tool.py  remediation_validator.py  sqs_tool.py
tests/: conftest.py  conftest_remediation.py
tests/compliance_agent/: __init__.py  test_ai_analyzer.py  test_llm_service.py
tests/compliance_agent/integration/: __init__.py  test_compliance_agent.py
tests/compliance_agent/unit/: __init__.py  test_ai_secrets_service.py  test_clean_edgp_agent.py  test_compliance_pattern_loader.py  test_compliance_utils.py  test_data_retention_scanner.py  test_international_ai_agent.py
tests/integration/: test_api.py  test_health_metrics.py  test_remediation_api.py  test_secrets_manager_integration.py  test_secrets_manager_simple.py
tests/remediation/: README.md  __init__.py  conftest.py  run_tests.py
tests/remediation/unit/: __init__.py  test_decision_agent.py  test_decision_agent_enhanced.py  test_decision_agent_realistic.py  test_decision_agent_secrets_manager.py  test_models.py  test_models_fixed.py  test_notification_tool.py  test_remediation_agent_main.py  test_remediation_components_additional.py  test_remediation_graph.py  test_remediation_validator.py  test_remediation_workflow_flow.py  test_sqs_tool.py  test_sqs_tool_enhanced.py  test_validation_agent.py  test_validation_agent_coverage.py  test_validation_agent_enhanced.py  test_validation_agent_simplified.py  test_workflow_agent.py  test_workflow_agent_enhanced.py
tests/unit/: __init__.py  test_aws_rds_service.py  test_clean_edgp_agent.py  test_compliance_engine.py  test_compliance_utils.py  test_comprehensive_coverage.py  test_edgp_database_service.py  test_edgp_models.py  test_health_api.py  test_llm_service.py  test_llm_service_comprehensive.py  test_massive_coverage_boost.py  test_metrics_api.py  test_models.py  test_remediation_integration_service.py  test_remediation_state_comprehensive.py  test_rule_engine.py  test_utils_compliance_only.py
