[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
exclude = [
    "venv/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "structlog.*",
    "redis.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-compliance-agent"
version = "1.0.0"
description = "AI-powered compliance checking for PDPA, international data privacy, and data governance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Compliance Team", email = "team@example.com"},
]
keywords = ["compliance", "privacy", "PDPA", "GDPR", "data-governance", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Legal",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # AI/ML Libraries
    "openai>=1.3.0",
    "langchain>=0.0.340",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.0.2",
    "langgraph>=0.0.69",
    "grandalf>=0.8",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",

    # Database & Storage
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "psycopg>=3.1.0",
    "redis>=5.0.1",

    # API & HTTP
    "httpx==0.25.2",
    "requests==2.31.0",
    "aiohttp==3.9.1",

    # AWS Services
    "boto3>=1.34.0",
    "botocore>=1.34.0",

    # Data Processing
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",

    # Configuration & Environment
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "toml==0.10.2",

    # Logging & Monitoring
    "structlog==23.2.0",
    "prometheus-client==0.19.0",

    # Security & Compliance
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",

    # Date & Time
    "python-dateutil==2.8.2",
    "pytz==2023.3",

    # Validation & Schema
    "jsonschema==4.20.0",
    "marshmallow==3.20.1",

    # Development & Debugging
    "ipython==8.17.2",
    "jupyter==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "factory-boy==3.3.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.14",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-compliance-agent"
Documentation = "https://ai-compliance-agent.readthedocs.io/"
Repository = "https://github.com/your-org/ai-compliance-agent.git"
"Bug Tracker" = "https://github.com/your-org/ai-compliance-agent/issues"

[project.scripts]
compliance-agent = "src.compliance_agent.api.main:app"

[dependency-groups]
dev = [
    "mypy>=1.7.1",
]
